Enhance CI/CD workflow with caching and non-blocking steps
Added caching for Flutter dependencies and modified analysis and metrics steps to be non-blocking.

--- a/.github/workflows/flutter_ci_cd_deploy.yml
+++ b/.github/workflows/flutter_ci_cd_deploy.yml
@@ -30,14 +30,25 @@ jobs:
         with:
           channel: beta
 
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            build/
+          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
+
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Analyze code
-        run: flutter analyze
+      - name: Analyze code (non-blocking)
+        run: |
+          flutter analyze || echo "Ignoring warnings from flutter analyze"
 
-      - name: Dart Code Metrics
-        run: flutter pub global activate dart_code_metrics && flutter pub global run dart_code_metrics:metrics lib
+      - name: Dart Code Metrics (optional)
+        run: |
+          flutter pub global activate dart_code_metrics
+          flutter pub global run dart_code_metrics:metrics lib || echo "Metrics warnings ignored"
 
   security:
     name: Security and Dependency Scan
@@ -72,6 +83,14 @@ jobs:
         with:
           channel: beta
 
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            build/
+          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
+
       - name: Install dependencies
         run: flutter pub get
 
@@ -96,6 +115,14 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: beta
+
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            build/
+          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
 
       - name: Install dependencies
         run: flutter pub get
