Simplify Flutter CI/CD workflow to security scan only
Removed CI/CD steps for testing and building Flutter web applications, retaining only security scanning.

--- a/.github/workflows/flutter_ci_cd_deploy.yml
+++ b/.github/workflows/flutter_ci_cd_deploy.yml
@@ -1,59 +1,8 @@
-name: Flutter CI/CD + Deploy to GitHub Pages
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-  security-events: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-jobs:
-  analyze:
-    name: Code Analysis
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter (beta channel)
-        uses: subosito/flutter-action@v2
-        with:
-          channel: beta
-
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.pub-cache
-            build/
-          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Analyze code (non-blocking)
-        run: |
-          flutter analyze || echo "Ignoring warnings from flutter analyze"
-
-      - name: Dart Code Metrics (optional)
-        run: |
-          flutter pub global activate dart_code_metrics
-          flutter pub global run dart_code_metrics:metrics lib || echo "Metrics warnings ignored"
-
   security:
     name: Security and Dependency Scan
     runs-on: ubuntu-latest
     needs: analyze
+    if: github.event_name == 'pull_request'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -69,81 +18,3 @@ jobs:
           if [ -f pubspec.lock ]; then
             echo "Checking Dart dependencies (placeholder)"
           fi
-
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    needs: security
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter (beta channel)
-        uses: subosito/flutter-action@v2
-        with:
-          channel: beta
-
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.pub-cache
-            build/
-          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Run tests
-        run: flutter test --no-pub --coverage
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: coverage/
-
-  build:
-    name: Build Flutter Web
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter (beta channel)
-        uses: subosito/flutter-action@v2
-        with:
-          channel: beta
-
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.pub-cache
-            build/
-          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build web (Project Pages)
-        run: flutter build web --release --base-href "/yourTurnNow/"
-
-      - name: Upload artifact for deploy
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: build/web
-
-  deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: build
-    if: success() && github.ref == 'refs/heads/main'
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
