--- a/.github/workflows/flutter_ci_cd_deploy.yml
+++ b/.github/workflows/flutter_ci_cd_deploy.yml
@@ -43,12 +43,12 @@ jobs:
 
       - name: Analyze code (non-blocking)
         run: |
-          flutter analyze || echo "Ignoring warnings from flutter analyze"
+          flutter analyze || echo "⚠️ Ignoro i warning di flutter analyze"
 
-      - name: Dart Code Metrics (optional)
+      - name: Dart Code Metrics (non-blocking)
         run: |
           flutter pub global activate dart_code_metrics
-          flutter pub global run dart_code_metrics:metrics lib || echo "Metrics warnings ignored"
+          flutter pub global run dart_code_metrics:metrics lib || echo "⚠️ Ignoro i warning delle metriche"
 
   security:
     name: Security and Dependency Scan (PR only)
@@ -63,12 +63,12 @@ jobs:
         uses: actions/dependency-review-action@v3
 
       - name: Install safety scanner
-        run: pip install safety || echo "Python not installed"
+        run: pip install safety || echo "Python non installato"
 
       - name: Security check (placeholder)
         run: |
           if [ -f pubspec.lock ]; then
-            echo "Checking Dart dependencies (placeholder)"
+            echo "🔒 Controllo dipendenze Dart (placeholder)"
           fi
 
   test:
@@ -96,9 +96,16 @@ jobs:
         run: flutter pub get
 
       - name: Run tests (skip if none)
-        run:     if [ -d "test" ] && [ "$(ls -A test)" ]; then      echo "🧪 Eseguo i test trovati..."      flutter test --no-pub --coverage || echo "⚠️ Test falliti ma continuo la pipeline." else       echo "⚠️ Nessun test trovato, continuo senza errori."fi
+        run: |
+          if [ -d "test" ] && [ "$(ls -A test)" ]; then
+            echo "🧪 Eseguo i test trovati..."
+            flutter test --no-pub --coverage || echo "⚠️ Test falliti ma continuo la pipeline."
+          else
+            echo "⚠️ Nessun test trovato, continuo senza errori."
+          fi
 
       - name: Upload test results
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
