--- a/.github/workflows/flutter_ci_cd_deploy.yml
+++ b/.github/workflows/flutter_ci_cd_deploy.yml
@@ -11,7 +11,6 @@ permissions:
   contents: write
   pages: write
   id-token: write
-  security-events: write
 
 concurrency:
   group: "pages"
@@ -22,13 +21,12 @@ jobs:
     name: Code Analysis
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Flutter (beta channel)
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: beta
+          channel: stable
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
@@ -37,96 +35,46 @@ jobs:
             ~/.pub-cache
             build/
           key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+          restore-keys: ${{ runner.os }}-flutter-
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Analyze code (non-blocking)
-        run: |
-          flutter analyze || echo "⚠️ Ignoro i warning di flutter analyze"
-
-      - name: Dart Code Metrics (non-blocking)
-        run: |
-          flutter pub global activate dart_code_metrics
-          flutter pub global run dart_code_metrics:metrics lib || echo "⚠️ Ignoro i warning delle metriche"
-
-  security:
-    name: Security and Dependency Scan (PR only)
-    runs-on: ubuntu-latest
-    needs: analyze
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Dependency review
-        uses: actions/dependency-review-action@v3
-
-      - name: Install safety scanner
-        run: pip install safety || echo "⚠️ Python non installato"
-
-      - name: Security check (placeholder)
-        run: |
-          if [ -f pubspec.lock ]; then
-            echo "🔒 Controllo dipendenze Dart (placeholder)"
-          fi
+      - name: Analyze code
+        run: flutter analyze || echo "⚠️ Warning ignorati"
 
   test:
     name: Run Tests
     runs-on: ubuntu-latest
     needs: analyze
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter (beta channel)
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
         with:
-          channel: beta
-
-      - name: Cache Flutter dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.pub-cache
-            build/
-          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
-
-      - name: Install dependencies
-        run: flutter pub get
-
+          channel: stable
+      - run: flutter pub get
       - name: Run tests (skip if none)
         run: |
           if [ -d "test" ] && [ "$(ls -A test)" ]; then
-            echo "🧪 Eseguo i test trovati..."
-            flutter test --no-pub --coverage || echo "⚠️ Test falliti ma continuo la pipeline."
+            flutter test --no-pub --coverage || echo "⚠️ Test falliti, ma continuo."
           else
-            echo "⚠️ Nessun test trovato, continuo senza errori."
+            echo "⚠️ Nessun test trovato."
           fi
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: coverage/
 
   build:
     name: Build Flutter Web
     runs-on: ubuntu-latest
     needs: test
+    env:
+      API_KEY: ${{ secrets.API_KEY }}
+      BASE_URL: ${{ secrets.BASE_URL }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Flutter (beta channel)
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: beta
+          channel: stable
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
@@ -135,13 +83,17 @@ jobs:
             ~/.pub-cache
             build/
           key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-flutter-
+          restore-keys: ${{ runner.os }}-flutter-
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build web (Project Pages)
+      - name: Generate .env file
+        run: |
+          echo "API_KEY=${{ secrets.API_KEY }}" > .env
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
+
+      - name: Build web
         run: flutter build web --release --base-href "/yourTurnNow/"
 
       - name: Upload artifact for deploy
