--- a/.github/workflows/flutter_ci_cd_deploy.yml
+++ b/.github/workflows/flutter_ci_cd_deploy.yml
@@ -1,10 +1,10 @@
-name: 🧪 Flutter CI/CD + Deploy to GitHub Pages
+name: Flutter CI/CD + Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ "main" ]
   workflow_dispatch:
 
 permissions:
@@ -18,135 +18,98 @@ concurrency:
 
 jobs:
   analyze:
-    name: 🔍 Code Analysis
+    name: Code Analysis
     runs-on: ubuntu-latest
     steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: 🐦 Setup Flutter
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'
-          channel: 'stable'
-          cache: true
+          channel: stable
 
-      - name: 📦 Get dependencies
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            build/
+          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-
+
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: 🔧 Verify Flutter installation
-        run: flutter doctor -v
-
-      - name: ⚡ Analyze code
-        run: flutter analyze --fatal-infos || echo "⚠️ Warning ignorati"
+      - name: Analyze code
+        run: flutter analyze || echo "⚠️ Warning ignorati"
 
   test:
-    name: 🧪 Run Tests
+    name: Run Tests
     runs-on: ubuntu-latest
     needs: analyze
-
     steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🐦 Setup Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'
-          channel: 'stable'
-          cache: true
-
-      - name: 📦 Get dependencies
-        run: flutter pub get
-
-      - name: 🧪 Run tests (skip if none)
+          channel: stable
+      - run: flutter pub get
+      - name: Run tests (skip if none)
         run: |
           if [ -d "test" ] && [ "$(ls -A test)" ]; then
-            flutter test --coverage --reporter=expanded || echo "⚠️ Test falliti, ma continuo."
+            flutter test --no-pub --coverage || echo "⚠️ Test falliti, ma continuo."
           else
             echo "⚠️ Nessun test trovato."
           fi
 
-      - name: 📊 Upload coverage to Codecov (optional)
-        if: success()
-        uses: codecov/codecov-action@v3
-        with:
-          file: coverage/lcov.info
-          fail_ci_if_error: false
-
   build:
-    name: 🏗️ Build & Prepare for Deploy
+    name: Build Flutter Web
     runs-on: ubuntu-latest
     needs: test
     env:
       API_KEY: ${{ secrets.API_KEY }}
       BASE_URL: ${{ secrets.BASE_URL }}
-
     steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: 🐦 Setup Flutter
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'
-          channel: 'stable'
-          cache: true
+          channel: stable
 
-      - name: 📦 Get dependencies
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            build/
+          key: ${{ runner.os }}-flutter-${{ hashFiles('pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-flutter-
+
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: 🧩 Generate .env file
+      - name: Generate .env file
         run: |
           echo "API_KEY=${{ secrets.API_KEY }}" > .env
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
 
-      - name: 🌐 Build Web
+      - name: Build web
         run: flutter build web --release --base-href "/yourTurnNow/"
 
-      - name: 📱 Build APK
-        run: flutter build apk --debug
-
-      - name: 📤 Upload artifact for deploy
+      - name: Upload artifact for deploy
         uses: actions/upload-pages-artifact@v3
         with:
           path: build/web
 
   deploy:
-    name: 🚀 Deploy to GitHub Pages
+    name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     needs: build
     if: success() && github.ref == 'refs/heads/main'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
-      - name: 🚀 Deploy
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-  protection:
-    name: 🛡️ Branch Protection
-    runs-on: ubuntu-latest
-    needs: [test, build]
-    if: always()
-
-    steps:
-      - name: ❌ Fail if tests failed
-        if: needs.test.result != 'success'
-        run: |
-          echo "❌ Tests failed! Cannot proceed with push/merge."
-          exit 1
-
-      - name: ❌ Fail if build failed
-        if: needs.build.result != 'success'
-        run: |
-          echo "❌ Build failed! Cannot proceed with push/merge."
-          exit 1
-
-      - name: ✅ All checks passed
-        if: needs.test.result == 'success' && needs.build.result == 'success'
-        run: |
-          echo "✅ All tests and builds passed successfully!"
-          echo "🚀 Safe to merge/push to protected branches."
