--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,3 +33,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/g-logo.png
+  
+  # Font fallback sicuri per evitare errori Noto
+  fonts:
+    - family: SafeFont
+      fonts:
+        - asset: packages/flutter/lib/fonts/Roboto-Regular.ttf
