--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   intl: 0.20.2
   http: ^1.5.0
   flutter_dotenv: ^6.0.0
+  fl_chart: ^0.68.0
+
 
 dev_dependencies:
   flutter_test:
