--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,31 +9,40 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+
   flutter_localizations:
     sdk: flutter
+  intl: ^0.20.2
+
+
   flutter_appauth: ^9.0.1
-  flutter_riverpod: ^2.4.0
-  go_router: ^16.1.0
-  graphql_flutter: ^5.1.2
-  pdf: ^3.10.7
-  printing: ^5.11.0
-  provider: ^6.0.5
   google_sign_in: ^6.2.1
-  intl: 0.20.2
+  graphql_flutter: ^5.1.2
   http: ^1.5.0
   flutter_dotenv: ^6.0.0
-  fl_chart: ^0.68.0
 
+
+  flutter_riverpod: ^2.4.0
+  provider: ^6.0.5
+  go_router: ^16.1.0
+  fl_chart: ^0.68.0
+  flutter_svg: ^2.0.7
+
+
+  pdf: ^3.10.7
+  printing: ^5.11.0
+  flutter_gen: ^5.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  melos: ^6.0.0
   flutter_lints: ^6.0.0
-  flutter_svg: ^2.0.7
+  melos: ^6.0.0
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - assets/images/g-logo.png
     - .env
