--- a/.github/workflows/flutter_ci_cd_deploy.yml
+++ b/.github/workflows/flutter_ci_cd_deploy.yml
@@ -40,8 +40,13 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Generate dummy .env
+        run: |
+          echo "API_KEY=dummy" > .env
+          echo "BASE_URL=dummy" >> .env
+
       - name: Analyze code
-        run: flutter analyze || echo "⚠️ Warning ignorati"
+        run: flutter analyze
 
   test:
     name: Run Tests
@@ -53,12 +58,18 @@ jobs:
         with:
           channel: stable
       - run: flutter pub get
+
+      - name: Generate dummy .env
+        run: |
+          echo "API_KEY=dummy" > .env
+          echo "BASE_URL=dummy" >> .env
+
       - name: Run tests (skip if none)
         run: |
           if [ -d "test" ] && [ "$(ls -A test)" ]; then
-            flutter test --no-pub --coverage || echo "⚠️ Test falliti, ma continuo."
+            flutter test --no-pub --coverage
           else
-            echo "⚠️ Nessun test trovato."
+            echo "⚠️ Nessun test trovato, skip."
           fi
 
   build:
